Kubernetes: showing differences of size between JDK8 and Alpine