@@ -24,23 +24,27 @@ Feel free to reach me at carlos.salazar@codesolt.com or find out more about me a
 
 ## Added support for Docker & K8s
 
+For the following section make sure you have a Spring Boot fat jar built:
+`mvn clean package spring-boot:repackage`
+
 ### Docker:
 1. Package your application: `mvn clean package`
 2. Build the image: `docker image build -t codesolt/spring:0.1.0 .`
 3. Ensure the image by running it as: 
 `docker container run --name springapp -p 8080:8080 -d codesolt/spring:0.1.0`
 4. Kill the image: `docker rm -f <container-id>`
- 
+
+* Use alpine for small images:
+`docker image build -t codesolt/spring:0.1.1 -f Dockerfile.alpine .`
+
 ### Docker with jib
 1. Build your image our of Maven plugin with: `mvn clean jib:dockerBuild`
 
-### Docker with Java 9 modules
-1. create a folder to store your personalized JDK:
-`mkdir slimjre`
-2. Build a slim JDK with your only needed modules with: 
-`jlink --output slimjre --add-modules $(jdeps --print-module-deps target/employee-api-1.0.0.jar),java.xml,jdk.unsupported,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument`
-3. Build an image using that slim JRE with: `docker image build -t codesolt/spring:0.1.1 -f Dockerfile.jre .`
- 
+### Debug image with IDEA
+1. Open Run menu/debug/config
+3. Create a new `remote` configuration
+3. Hit the debug button (Image has to bee running on local host, make an SSH tunnel if not)
+
 ### K8s with config file
 1. Point your `kubectl config` to a proper running K8s cluster
 2. Deploy the following file to the cluster with:
@@ -50,4 +54,10 @@ Feel free to reach me at carlos.salazar@codesolt.com or find out more about me a
 
 ### K8s using Helm
 1.Deploy with helm template using:
-`helm install --name springapp springapp` 
+`helm install --name springapp springapp`
+
+### EKS support
+1. Change K8s context to AWS
+`kubectl config use-context <aws-context>`  
+2. Deploy to EKS cluster with HElM
+`helm install --name springapp springapp`
